# connectivity-osm-data-prep

./: .gitignore  README.md
destinations_from_pbf/: Cargo.toml  run.sh
destinations_from_pbf/src/: destinations.rs  lib.rs  main.rs  read.rs  values.rs
driving_graph/: Cargo.toml
driving_graph/src/: edges.rs  graph.rs  lib.rs  main.rs
graph_from_pbf/: Cargo.toml  run.sh  run_for_each_year.sh  run_for_england_for_each_year.sh
graph_from_pbf/settings/: cycling.json  walk.json
graph_from_pbf/src/: angles.rs  edges.rs  graph.rs  lib.rs  main.rs  pt_stops.rs  public_transport_graphs.rs  subnodes.rs  traversal_times.rs
subnodes_from_pbf/: Cargo.toml  run.sh
subnodes_from_pbf/src/: edges.rs  lib.rs  main.rs  subnodes.rs
yearly_vector_tiles/: Cargo.toml  run.sh
yearly_vector_tiles/src/: main.rs
