[package]
name = "driving_graph"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
fs-err = "2.11.0"
geo = { version = "0.27.0", default-features = false }
geojson = "0.24.1"
indicatif = { version = "0.17.8", features = ["rayon"] }
rayon = "1.8.1"
serde_json = "1.0"
serde = "1.0.152"
kdtree = "0.6.0"